--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory Game</title>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <div class="container">
@@ -17,125 +17,125 @@
             <div class="box">
                 <div class="front">?</div>
                 <div class="back">
-                    <img src="/imgs/angularjs.png" alt="">
+                    <img src="imgs/angularjs.png" alt="">
                 </div>
             </div>
             <div class="box">
                 <div class="front">?</div>
                 <div class="back">
-                    <img src="/imgs/angularjs.png" alt="">
+                    <img src="imgs/angularjs.png" alt="">
                 </div>
             </div>
             <div class="box">
                 <div class="front">?</div>
                 <div class="back">
-                    <img src="/imgs/bootstrap.png" alt="">
+                    <img src="imgs/bootstrap.png" alt="">
                 </div>
             </div>
             <div class="box">
                 <div class="front">?</div>
                 <div class="back">
-                    <img src="/imgs/bootstrap.png" alt="">
+                    <img src="imgs/bootstrap.png" alt="">
                 </div>
             </div>
             <div class="box">
                 <div class="front">?</div>
                 <div class="back">
-                    <img src="/imgs/cplusplus.png" alt="">
+                    <img src="imgs/cplusplus.png" alt="">
                 </div>
             </div>
             <div class="box">
                 <div class="front">?</div>
                 <div class="back">
-                    <img src="/imgs/cplusplus.png" alt="">
+                    <img src="imgs/cplusplus.png" alt="">
                 </div>
             </div>
             <div class="box">
                 <div class="front">?</div>
                 <div class="back">
-                    <img src="/imgs/csharp.png" alt="">
+                    <img src="imgs/csharp.png" alt="">
                 </div>
             </div>
             <div class="box">
                 <div class="front">?</div>
                 <div class="back">
-                    <img src="/imgs/csharp.png" alt="">
+                    <img src="imgs/csharp.png" alt="">
                 </div>
             </div>
             <div class="box">
                 <div class="front">?</div>
                 <div class="back">
-                    <img src="/imgs/css3.png" alt="">
+                    <img src="imgs/css3.png" alt="">
                 </div>
             </div>
             <div class="box">
                 <div class="front">?</div>
                 <div class="back">
-                    <img src="/imgs/css3.png" alt="">
+                    <img src="imgs/css3.png" alt="">
                 </div>
             </div>
             <div class="box">
                 <div class="front">?</div>
                 <div class="back">
-                    <img src="/imgs/github.png" alt="">
+                    <img src="imgs/github.png" alt="">
                 </div>
             </div>
             <div class="box">
                 <div class="front">?</div>
                 <div class="back">
-                    <img src="/imgs/github.png" alt="">
+                    <img src="imgs/github.png" alt="">
                 </div>
             </div>
             <div class="box">
                 <div class="front">?</div>
                 <div class="back">
-                    <img src="/imgs/html5.png" alt="">
+                    <img src="imgs/html5.png" alt="">
                 </div>
             </div>
             <div class="box">
                 <div class="front">?</div>
                 <div class="back">
-                    <img src="/imgs/html5.png" alt="">
+                    <img src="imgs/html5.png" alt="">
                 </div>
             </div>
             <div class="box">
                 <div class="front">?</div>
                 <div class="back">
-                    <img src="/imgs/java.png" alt="">
+                    <img src="imgs/java.png" alt="">
                 </div>
             </div>
             <div class="box">
                 <div class="front">?</div>
                 <div class="back">
-                    <img src="/imgs/java.png" alt="">
+                    <img src="imgs/java.png" alt="">
                 </div>
             </div>
             <div class="box">
                 <div class="front">?</div>
                 <div class="back">
-                    <img src="/imgs/typescript.png" alt="">
+                    <img src="imgs/typescript.png" alt="">
                 </div>
             </div>
             <div class="box">
                 <div class="front">?</div>
                 <div class="back">
-                    <img src="/imgs/typescript.png" alt="">
+                    <img src="imgs/typescript.png" alt="">
                 </div>
             </div>
             <div class="box">
                 <div class="front">?</div>
                 <div class="back">
-                    <img src="/imgs/visualstudio.png" alt="">
+                    <img src="imgs/visualstudio.png" alt="">
                 </div>
             </div>
             <div class="box">
                 <div class="front">?</div>
                 <div class="back">
-                    <img src="/imgs/visualstudio.png" alt="">
+                    <img src="imgs/visualstudio.png" alt="">
                 </div>
             </div>
         </div>
     </div>
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
