--- a/index.html
+++ b/index.html
@@ -8,9 +8,26 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+    <div class="overlay-start">
+        <div class="content">
+            <div class="input">
+                <input type="text" autofocus placeholder="Enter your name">
+            </div>
+            <div class="btn">Start</div>
+        </div>
+    </div>
+    <div class="overlay-end">
+        <div class="content">
+            <h3 class="winner-loser">YOU LOST THE GAME ^^</h3>
+            <div class="option">
+                <div class="btn">Again</div>
+                <div class="cancel">Cancel</div>
+            </div>
+        </div>
+    </div>
     <div class="container">
         <div class="header">
-            <p>Hello: <span>Huda</span></p>
+            <p>Hello: <span class="user-name">User Name</span></p>
             <p>Wrong Tries: <span class="wrong">0</span></p>
         </div>
         <div class="content">
